# test-webapp

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  index.html  manifest.json  webapp_template.js  webapp_template_bg.wasm
.github/workflows/: pages.yml
assets/: manifest.json  sw.js
docs/: index.html  wwwapp_template.js
src/: example_view.rs  log_view.rs  main.rs  main.rs.orig  raadbg.rs  root_app.rs
