[package]
name = "raawasm"
version = "0.1.0"
license = "MIT"
edition = "2021"


[dependencies]
eframe = { version = "0.21.0", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
egui = "0.21.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm
[profile.dev.package."*"]
opt-level = 2
