[package]
name = "test-webapp"
version = "0.1.0"
license = "MIT"
edition = "2021"


[dependencies]
egui = "0.24.0"
eframe = { version = "0.24.0", default-features = false, features = [
	"default_fonts",
	"glow",
	"persistence",
]}
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

